--- a/src/components/home/css/home.css
+++ b/src/components/home/css/home.css
@@ -1,6 +1,54 @@
 .contenedor {
   display: flex;
+  flex-wrap: wrap;
+}
+.separador {
+  flex: 10%;
+}
+.columna {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 80%;
   align-items: center;
-  flex-direction: row;
-  max-width: fit-content;
+  justify-content: center;
+}
+.navButton {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #4cc9f0;
+  border: none;
+  border-radius: 0px 10px 10px 0px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+.navButton:hover {
+  background-color: #45a049;
+}
+
+.Nopressed {
+  color: #1a759f;
+  font: 2em sans-serif;
+}
+
+.load {
+  width: 100%;
+  background-color: #4cc9f0;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+@media (max-width: 500px) {
+  .separador {
+    flex: 0;
+    display: none;
+  }
 }
