--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
   padding: 20px 0;
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
