--- a/src/components/login/css/login.css
+++ b/src/components/login/css/login.css
@@ -1,35 +1,43 @@
 label {
-  font-size: large;
+  font-size: 1.3em;
   color: #707070;
+  font-weight: bold;
 }
 
 form {
   background-color: #f2f2f2;
   text-align: center;
-  width: 800px;
+  width: 500px;
+  margin-top: 100px;
+  padding: 20px;
 }
 input {
   width: 100%;
   padding: 12px 20px;
-  margin: 8px 0;
+  margin: 25px 0;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  font-size: 1.3em;
+  font-weight: bold;
 }
 
 button[type="submit"] {
   width: 100%;
-  background-color: #4cc9f0;
+  background-color: #2e788f;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
   border-radius: 4px;
+  font-size: 1.3em;
   cursor: pointer;
 }
 button[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: #fff;
+  color: #2e788f;
+  border: 3px solid #2e788f;
 }
 
 @media (max-width: 850px) {
