--- a/src/components/login/css/login.css
+++ b/src/components/login/css/login.css
@@ -32,6 +32,7 @@ button[type="submit"] {
   border: none;
   border-radius: 4px;
   font-size: 1.3em;
+  font-weight: bold;
   cursor: pointer;
 }
 button[type="submit"]:hover {
