--- a/src/components/home/css/home.css
+++ b/src/components/home/css/home.css
@@ -20,7 +20,7 @@
   justify-content: center;
 }
 .navButton {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: #2e788f;
