--- a/src/components/listado/css/listado.css
+++ b/src/components/listado/css/listado.css
@@ -9,10 +9,13 @@
   margin: 10px;
 }
 .card h3 {
-  color: #161a1d;
+  color: #30383f;
+  margin-bottom: 0;
 }
 .card li {
   list-style-type: none;
   padding: 0;
+  padding-bottom: 15px;
   margin: 0;
+  color: #333;
 }
